@@ -1,3 +1,6 @@
+* Mon Aug 29 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 5.0.4-0
+- Added booleans to toggle sections of audit rules.
+
 * Tue Jul 26 2016 Lucas Yamanishi <lucas.yamanishi@onyxpoint.com> - 5.0.3-0
 - Fix for strict_variables failure
 
